# resiliencegrid

./: .dockerignore  .gitignore  DEPLOY.md  DEPLOYMENT.md  Dockerfile  RAILWAY_DEPLOY.md  README.md  RENDER_DEPLOY.md  TESTING_GUIDE.md  WEBSOCKET_INTEGRATION.md  deploy-railway.bat  deploy-render.bat  deploy.sh  docker-compose.yml  push.bat  railway.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  simulation.py
backend/app/agents/: alert.py  base.py  classifier.py  dashboard.py  iot.py  logistics.py  news.py  predictor.py  reporter.py  resource.py  satellite.py  social.py
backend/app/api/: routes.py  websocket.py
backend/app/core/: config.py  orchestrator.py
frontend/: Dockerfile  Dockerfile.railway  IMPLEMENTATION.md  index.html  nginx.conf  nginx.railway.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentSwarmMonitor.tsx  AutoReportGenerator.tsx  AutoReportPanel.tsx  DisasterMap.tsx  Layout.tsx
frontend/src/hooks/: useSwarmSocket.ts
frontend/src/stores/: swarmStore.ts
frontend/src/styles/: design-system.css
